infrastructures/OCI/k8s/kong/konga-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: konga
  namespace: apps
  labels:
    app: konga
spec:
  replicas: 1
  selector:
    matchLabels:
      app: konga
  template:
    metadata:
      labels:
        app: konga
    spec:
      nodeSelector:
        workload: light
      containers:
        - name: konga
          image: docker.io/pantsel/konga:latest
          ports:
            - containerPort: 1337
              name: http
              protocol: TCP
          resources:
            requests:
              cpu: 50m
              memory: 128Mi
            limits:
              cpu: 200m
              memory: 256Mi
          readinessProbe:
            httpGet:
              path: /
              port: 1337
            initialDelaySeconds: 15
            periodSeconds: 10
            timeoutSeconds: 3
          livenessProbe:
            httpGet:
              path: /
              port: 1337
            initialDelaySeconds: 30
            periodSeconds: 20
            timeoutSeconds: 3
