infrastructures/OCI/k8s/kong/kong-status-service.yml
apiVersion: v1
kind: Service
metadata:
  name: kong-kong-status
  namespace: apps
  labels:
    app.kubernetes.io/name: kong
    app.kubernetes.io/instance: kong
spec:
  selector:
    app.kubernetes.io/name: kong
    app.kubernetes.io/instance: kong
  ports:
    - name: status
      port: 8100
      targetPort: 8100
      protocol: TCP
  type: ClusterIP
