infrastructures/OCI/k8s/kong/konga-service.yml
apiVersion: v1
kind: Service
metadata:
  name: konga
  namespace: apps
  labels:
    app: konga
spec:
  type: ClusterIP
  selector:
    app: konga
  ports:
    - name: http
      port: 1337
      targetPort: 1337
      protocol: TCP
